# telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  application.py  main.py
app/api/: __init__.py  auth.py  dependencies.py  main.py  presenter.py  routes.py  schemas.py
app/assets/: __init__.py  repository.py
app/bot/: app.py  callbacks.py  handlers.py  keyboards.py  (+2 more)
assets/: asset_manifest.json  brand_tokens.json  visual_usage_map.json
content/: CHILD_ERROR_LOOKS_AT_PARENT_03.json  CHILD_LEFT_ON_BENCH_04.json  CHILD_SILENT_AFTER_DEFEAT_06.json  DISPUTED_REFEREE_DECISION_05.json  PARENT_RESPONSE_AFTER_VICTORY_07.json  PREMATCH_GAME_REFUSAL_01.json  PREMATCH_INSTRUCTIONS_02.json  approved_text_comparison_report.json  mini_app_visuals.json  scenario.schema.json  scenario_catalog.json  ui_texts.ru.json  validation_report_branded_v2.txt
docs/: CODEX_PROMPT_BRANDED_V2.md  Mental_Skills_football_parent_trainer_revised.docx  README_Codex_Package_BRANDED_V2.md  VISUAL_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  playwright.live.config.ts  pnpm-lock.yaml  vite.config.ts
migrations/: env.py
scripts/: compare_approved_content.py  generate_approved_scenarios.py  validate_content.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_bot_keyboard.py  test_content_validation.py  test_engine.py  test_mini_app_visuals.py  test_module_boundaries.py  test_progress.py  test_safety_texts.py  test_webapp_auth.py
(+48 files in other folders)
